[project]
name = "lanpoker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eventlet>=0.41.0",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "pokerkit>=0.7.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
